Fix modal scrolling on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -279,6 +279,10 @@ p {
 	text-align: right;
 }
 
+.modal { 
+	position: absolute; 
+}
+
 html.dark-theme {
 	body {
 		background-color: #222;
